--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && yarn babel",
+    "babel": "babel dist -d ./dist/",
     "start": "nodemon",
-    "start:local": " yarn set:docker && ttab -t 'Firebase Emulators' yarn set:emulators && ttab -t 'Server' yarn nodemon",
+    "new-tab": "$(yarn bin ttab)",
+    "start:local": "yarn set:docker && yarn new-tab -t 'Firebase Emulators' yarn set:emulators && yarn new-tab -t 'Server' yarn nodemon",
+    "start:dev": "yarn set:docker && yarn new-tab -t 'Server' yarn nodemon",
     "start:build": "node dist/index.js",
     "test": "jest",
     "type-check": "tsc --noEmit",
@@ -17,16 +20,16 @@
     "prepare": "husky install",
     "set:emulators": "firebase emulators:start",
     "set:docker": "docker-compose up -d && prisma db push",
-    "seed": "prisma db seed"
-  },
-  "prisma": {
     "seed": "ts-node --transpile-only prisma/seed/index.ts"
   },
+  "prisma": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -45,6 +48,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.0.0",
@@ -64,5 +68,6 @@
     "tsconfig-paths": "^4.1.0",
     "ttab": "^0.8.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@4.4.1"
 }
