--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "new-tab": "$(yarn bin ttab)",
     "build": "tsc && yarn babel",
     "babel": "babel dist -d ./dist/",
     "start": "nodemon",
-    "new-tab": "$(yarn bin ttab)",
     "start:local": "yarn set:docker && yarn new-tab -t 'Firebase Emulators' yarn set:emulators && yarn new-tab -t 'Server' yarn nodemon",
     "start:dev": "yarn set:docker && yarn new-tab -t 'Server' yarn nodemon",
     "start:build": "node dist/index.js",
-    "test": "jest",
     "type-check": "tsc --noEmit",
-    "lint": "eslint \"./**/*.{ts,test.ts}\"",
     "format": "prettier --write './**/*.{ts,test.ts}' --config ./.prettierrc",
+    "lint": "eslint \"./**/*.{ts,test.ts}\"",
     "lint:fix": "eslint --fix && yarn format",
     "pre-commit": "yarn type-check && yarn lint",
     "prepare": "husky install",
     "set:emulators": "firebase emulators:start",
     "set:docker": "docker-compose up -d && prisma db push",
-    "seed": "ts-node --transpile-only prisma/seed/index.ts"
+    "seed": "ts-node --transpile-only prisma/seed/index.ts",
+    "test": "jest",
+    "test:integration": "ts-node test/integration"
   },
   "prisma": {},
   "keywords": [],
@@ -28,6 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "axios": "^1.7.7",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cors": "^2.8.5",
@@ -37,6 +39,7 @@
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.1",
     "prisma": "^5.5.2",
+    "uuid": "^10.0.0",
     "winston": "^3.8.2",
     "yup": "^1.3.3"
   },
@@ -46,6 +49,7 @@
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "babel-plugin-module-resolver": "^4.1.0",
