--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
