--- a/package.json
+++ b/package.json
@@ -28,51 +28,51 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "5.20.0",
     "axios": "^1.7.7",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
-    "firebase-admin": "^11.11.0",
-    "firebase-tools": "^12.9.1",
-    "prisma": "^5.5.2",
+    "firebase-admin": "^12.5.0",
+    "firebase-tools": "^13.20.1",
+    "prisma": "^5.20.0",
     "uuid": "^10.0.0",
-    "winston": "^3.8.2",
-    "yup": "^1.3.3"
+    "winston": "^3.14.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^10",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^16.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.16.10",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-n": "^17.10.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "supertest": "^6.2.4",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "ttab": "^0.8.0",
-    "typescript": "^5.2.2"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "ttab": "^0.9.0",
+    "typescript": "5.5.4"
   },
   "packageManager": "yarn@4.4.1"
 }
